--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,8 @@ jobs:
         run: |
           sudo apt -y update
           sudo apt install -y gcc-12 g++-12
-          sudo update-alternatives --set gcc /usr/bin/gcc-12
-          sudo update-alternatives --set g++ /usr/bin/g++-12
-          export CC=gcc
-          export CXX=g++
+          export CC=gcc-12
+          export CXX=g++-12
 
       - name: Set up clang 
         shell: bash
@@ -33,10 +31,8 @@ jobs:
         run: |
           sudo apt -y update
           sudo apt install -y clang-14
-          sudo update-alternatives --set clang /usr/bin/clang-14
-          sudo update-alternatives --set clang++ /usr/bin/clang++-14
-          export CC=clang
-          export CXX=clang++
+          export CC=clang-14
+          export CXX=clang++-14
 
           #      - name: Dev mode dependencies
           #        if: dev
