--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,11 @@ jobs:
           export CC=clang-14
           export CXX=clang++-14
 
-      - name: Dev mode dependencies
-        shell: bash
-        if: matrix.dev_mode == 'ON'
-        run: |
-          sudo apt install -y clang-format-14 clang-tidy-14 cppcheck
-          sudo ln -s /usr/bin/clang-format-14 /usr/bin/clang-format
-          sudo ln -s /usr/bin/clang-tidy-14 /usr/bin/clang-tidy
+          #      - name: Dev mode dependencies
+          #        shell: bash
+          #        if: matrix.dev_mode == 'ON'
+          #        run: |
+          #          sudo apt install -y clang-format-14 clang-tidy-14 cppcheck
 
       - name: Configure and build
         run: |
