Fixed typo in CI naming

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
         openmp: [ OFF, ON ]
         dev_mode: [ OFF, ON ]
 
-    name: "${{ matrix.compiler }}, ${{ matrix.build_type }}, OMP=$${{ matrix.openmp }}, 
-      Dev=$${{ matrix.dev_mode }}"
+    name: "${{ matrix.compiler }}, ${{ matrix.build_type }}, OMP=${{ matrix.openmp }}, 
+      Dev=${{ matrix.dev_mode }}"
 
     steps:
       - uses: actions/checkout@v3
