--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           sudo apt -y update
           sudo apt install -y gcc-12 g++-12 clang-14
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 100
-          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 100
+          echo "CC=gcc-12" >> $GITHUB_ENV 
+          echo "CXX=gcc-12" >> $GITHUB_ENV 
 
       - name: Set up clang 
         shell: bash
@@ -35,8 +35,9 @@ jobs:
         run: |
           sudo apt -y update
           sudo apt install -y clang-14
-          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-14 100
-          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-14 100
+          echo "CC=clang-14" >> $GITHUB_ENV 
+          echo "CXX=clang++-14" >> $GITHUB_ENV 
+
 
       - name: OpenMP
         shell: bash
