--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           sudo apt -y update
           sudo apt install -y gcc-12 g++-12 clang-14
           echo "CC=gcc-12" >> $GITHUB_ENV 
-          echo "CXX=gcc-12" >> $GITHUB_ENV 
+          echo "CXX=g++-12" >> $GITHUB_ENV 
 
       - name: Set up clang 
         shell: bash
@@ -37,7 +37,6 @@ jobs:
           sudo apt install -y clang-14
           echo "CC=clang-14" >> $GITHUB_ENV 
           echo "CXX=clang++-14" >> $GITHUB_ENV 
-
 
       - name: OpenMP
         shell: bash
