--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,3 +5,4 @@ add_um2_test(test_framework test_framework.cpp)
 add_um2_test(test_vector ./common/vector.cpp)
 add_um2_test(test_string ./common/string.cpp)
 add_um2_test(test_color ./common/color.cpp)
+add_um2_test(test_vec ./math/vec.cpp)
