--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,3 +6,4 @@ add_um2_test(test_sto    ./common/sto.cpp)
 add_um2_test(test_vector ./common/vector.cpp)
 add_um2_test(test_string ./common/string.cpp)
 add_um2_test(test_color ./common/color.cpp)
+add_um2_test(test_vec2 ./math/vec2.cpp)
