Appease gcc -pedantic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ set(UM2_HEADERS
     "include/um2/common/vector.hpp"
     "include/um2/common/string.hpp"
     "include/um2/common/color.hpp"
-    "include/um2/math/vec.hpp"
+    "include/um2/math/vec2.hpp"
     "include/um2c.h")    
     
 # Sources
