--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ set(UM2_HEADERS
     "include/um2/common/color.hpp"
     "include/um2/math/morton.hpp"
     "include/um2/math/vec2.hpp"
+    "include/um2/math/mat.hpp"
     "include/um2c.h")    
     
 # Sources
