WIP: adding noexcept and formatting

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_test.cmake)
 
 # Test the framework itself
 add_um2_test(test_framework test_framework.cpp)
+add_um2_test(bit_ceil ./common/bit_ceil.cpp)
 add_um2_test(sto    ./common/sto.cpp) 
 add_um2_test(vector ./common/vector.cpp)
 add_um2_test(string ./common/string.cpp)
