--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = tpls/glfw
 	url = https://github.com/glfw/glfw.git
 	branch = 3.3-stable
+[submodule "tpls/eigen"]
+	path = tpls/eigen
+	url = https://gitlab.com/libeigen/eigen.git
+	branch = 3.4
