--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,11 @@ jobs:
         build_type: [ Release, Debug ]
         cuda: [ OFF ]
         openmp: [ OFF, ON ]
+        vis: [OFF, ON]
         dev_mode: [ OFF, ON ]
 
     name: "${{ matrix.compiler }}, ${{ matrix.build_type }}, OMP=${{ matrix.openmp }}, 
-      Dev=${{ matrix.dev_mode }}"
+      Vis=${{ matrix.vis }}, Dev=${{ matrix.dev_mode }}"
 
     steps:
       - uses: actions/checkout@v3
@@ -43,6 +44,11 @@ jobs:
         if: matrix.openmp == 'ON'
         run: sudo apt install -y libomp-14-dev
 
+      - name: Vis
+        shell: bash
+        if: matrix.vis == 'ON'
+        run: sudo apt install -y xorg-dev libgl1-mesa-dev
+
       - name: Dev mode dependencies
         shell: bash
         if: matrix.dev_mode == 'ON'
@@ -55,7 +61,8 @@ jobs:
                 -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
                 -DUM2_ENABLE_CUDA=${{ matrix.cuda }} \
                 -DUM2_ENABLE_OPENMP=${{ matrix.openmp }} \
-                -DUM2_DEV_MODE=${{ matrix.dev_mode }}
+                -DUM2_DEV_MODE=${{ matrix.dev_mode }} \
+                -DUM2_ENABLE_VIS=${{ matrix.vis }}
           make -j -C build
 
       - name: Format check
