--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Vis
         shell: bash
         if: matrix.vis == 'ON'
-        run: sudo apt install -y xorg-dev libgl1-mesa-dev
+        run: sudo apt install -y xorg-dev libgl1-mesa-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev
 
       - name: Dev mode dependencies
         shell: bash
