--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,7 @@ jobs:
                 -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
                 -DUM2_ENABLE_CUDA=${{ matrix.cuda }} \
                 -DUM2_ENABLE_OPENMP=${{ matrix.openmp }} \
+                -DUM2_ENABLE_VIS=${{ matrix.vis }} \
                 -DUM2_DEV_MODE=${{ matrix.dev_mode }}
           make -j -C build
 
