--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -44,10 +44,12 @@
 #cmakedefine01 UM2_ENABLE_INT64
 #if UM2_ENABLE_INT64
 // We want this alias to be lower case to match int32_t, int64_t, etc.
-// NOLINTNEXTLINE(readability-identifier-naming)
+// NOLINTBEGIN(readability-identifier-naming)
 using len_t = int64_t;
+using ulen_t = uint64_t;
 #else
-// NOLINTNEXTLINE(readability-identifier-naming)
 using len_t = int32_t;
+using ulen_t = uint32_t;
+// NOLINTEND(readability-identifier-naming)
 #endif
 #define EIGEN_DEFAULT_DENSE_INDEX_TYPE len_t
