--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,14 +2,18 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_test.cmake)
 
 # Test the framework itself
 add_um2_test(test_framework test_framework.cpp)
+
 add_um2_test(bit_ceil ./common/bit_ceil.cpp)
 add_um2_test(sto    ./common/sto.cpp) 
 add_um2_test(vector ./common/vector.cpp)
 add_um2_test(string ./common/string.cpp)
 add_um2_test(color ./common/color.cpp)
+
 add_um2_test(morton ./math/morton.cpp)
 add_um2_test(vec ./math/vec.cpp)
 add_um2_test(mat ./math/mat.cpp)
+
+add_um2_test(point ./geometry/point.cpp)
 
 if (UM2_ENABLE_VIS)
   add_um2_test(window ./vis/window.cpp)
