--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -9,6 +9,7 @@
 // CUDA
 #cmakedefine01 UM2_ENABLE_CUDA
 #if UM2_ENABLE_CUDA
+#  include <cuda_runtime.h>
 #  define UM2_HOST    __host__
 #  define UM2_DEVICE  __device__
 #  define UM2_HOSTDEV __host__ __device__
