--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ option(UM2_ENABLE_CPPCHECK      "Enable cppcheck"                 ${UM2_DEV_MODE
 # Headers
 set(UM2_HEADERS
     "include/um2/common/config.hpp"
-    "include/um2/common/bit_ceil.hpp"
+    "include/um2/common/bit.hpp"
     "include/um2/common/sto.hpp"
     "include/um2/common/vector.hpp"
     "include/um2/common/string.hpp"
