--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,5 +21,5 @@ add_um2_test(axis_aligned_box ./geometry/axis_aligned_box.cpp)
 add_um2_test(line_segment     ./geometry/line_segment.cpp)
 
 if (UM2_ENABLE_VIS)
-  add_um2_test(window ./visualization/window.cpp)
+  add_um2_test(shader ./visualization/shader.cpp)
 endif()
