--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ option(UM2_BUILD_EXAMPLES   "Build examples"       ON)
 option(UM2_ENABLE_CUDA      "Enable CUDA"          OFF)
 option(UM2_ENABLE_OPENMP    "Enable OpenMP"        ON)
 option(UM2_ENABLE_FASTMATH  "Enable fast math"     ON)
-option(UM2_ENABLE_VIS       "Enable visualization" ON)
+option(UM2_ENABLE_VIS       "Enable visualization" OFF)
 
 ## Advanced options ###########################################################
 ###############################################################################
