--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(UM2_HEADERS
     "include/um2/geometry/axis_aligned_box.hpp"
     "include/um2/geometry/polytope.hpp"
     "include/um2/geometry/line_segment.hpp"
+    "include/um2/geometry/triangle.hpp"
     "include/um2c.h")    
 
 # Sources
