--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ add_um2_test(mat    ./math/mat.cpp)
 add_um2_test(point            ./geometry/point.cpp)
 add_um2_test(axis_aligned_box ./geometry/axis_aligned_box.cpp)
 add_um2_test(line_segment     ./geometry/line_segment.cpp)
+add_um2_test(triangle         ./geometry/triangle.cpp)
 
 if (UM2_ENABLE_VIS)
   add_um2_test(shader ./visualization/shader.cpp)
