--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = tpls/eigen
 	url = https://gitlab.com/libeigen/eigen.git
 	branch = 3.4
+[submodule "tpls/thrust"]
+	path = tpls/thrust
+	url = https://github.com/NVIDIA/thrust.git
+	branch = 2.1.x
