--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -8,17 +8,21 @@
 
 // CUDA
 #cmakedefine01 UM2_ENABLE_CUDA
+#undef HOST
+#undef DEVICE
+#undef HOSTDEV
+#undef GLOBAL
 #if UM2_ENABLE_CUDA
 #  include <cuda_runtime.h>
-#  define UM2_HOST    __host__
-#  define UM2_DEVICE  __device__
-#  define UM2_HOSTDEV __host__ __device__
-#  define UM2_GLOBAL  __global__
+#  define HOST    __host__
+#  define DEVICE  __device__
+#  define HOSTDEV __host__ __device__
+#  define GLOBAL  __global__
 #else
-#  define UM2_HOST
-#  define UM2_DEVICE
-#  define UM2_HOSTDEV
-#  define UM2_GLOBAL
+#  define HOST
+#  define DEVICE
+#  define HOSTDEV
+#  define GLOBAL
 #endif
 
 // spdlog
@@ -30,36 +34,37 @@
 // Attributes
 // -----------------------------------------------------------------------------
 // These are supported by GCC and Clang, but cause issues when using nvcc
+#undef PURE
+#undef CONST
+#undef HOT
 #if defined(__NVCC__)
-#  define UM2_PURE
-#  define UM2_CONST
-#  define UM2_HOT
+#  define PURE
+#  define CONST
+#  define HOT
 #else
-#  define UM2_PURE  [[gnu::pure]]
-#  define UM2_CONST [[gnu::const]]
-#  define UM2_HOT   [[gnu::hot]]
+#  define PURE  [[gnu::pure]]
+#  define CONST [[gnu::const]]
+#  define HOT   [[gnu::hot]]
 #endif
 
 // Define a PURE/CONST attribute that depends on a release build to be enabled
 #if defined(NDEBUG)
-#  define UM2_NDEBUG_PURE  UM2_PURE
-#  define UM2_NDEBUG_CONST UM2_CONST
+#  define NDEBUG_PURE  PURE
+#  define NDEBUG_CONST CONST
 #else
-#  define UM2_NDEBUG_PURE
-#  define UM2_NDEBUG_CONST
+#  define NDEBUG_PURE
+#  define NDEBUG_CONST
 #endif
 
 // Typedefs
 // -----------------------------------------------------------------------------
 #cmakedefine01 UM2_ENABLE_INT64
 #if UM2_ENABLE_INT64
-// We want this alias to be lower case to match int32_t, int64_t, etc.
+// We want this alias to be lower case to match uint32_t, uint64_t, etc.
 // NOLINTBEGIN(readability-identifier-naming)
-using len_t = int64_t;
-using ulen_t = uint64_t;
+using idx_t = uint64_t;
 #else
-using len_t = int32_t;
-using ulen_t = uint32_t;
+using idx_t = uint32_t;
 // NOLINTEND(readability-identifier-naming)
 #endif
-#define EIGEN_DEFAULT_DENSE_INDEX_TYPE len_t
+#define EIGEN_DEFAULT_DENSE_INDEX_TYPE idx_t
