--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,8 +38,9 @@ option(UM2_ENABLE_CPPCHECK      "Enable cppcheck"                 ${UM2_DEV_MODE
 # Headers
 set(UM2_HEADERS
     "include/um2/config.hpp"
-    "include/um2/common/sto.hpp"
-    "include/um2/common/vector.hpp"
+    "include/um2/common/memory.hpp"
+    "include/um2/common/Vector.hpp"
+    #    "include/um2/common/sto.hpp"
     #    "include/um2/common/string.hpp"
     #    "include/um2/common/color.hpp"
     #    "include/um2/math/morton.hpp"
