--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,12 +41,12 @@ set(UM2_HEADERS
     "include/um2/common/memory.hpp"
     "include/um2/common/algorithm.hpp"
     "include/um2/common/Vector.hpp"
-    #    "include/um2/common/sto.hpp"
+    "include/um2/common/sto.hpp"
     #    "include/um2/common/string.hpp"
     #    "include/um2/common/color.hpp"
     "include/um2/math/morton.hpp"
-    #"include/um2/math/vec.hpp"
-    #"include/um2/math/mat.hpp"
+    "include/um2/math/Vec.hpp"
+    "include/um2/math/Mat.hpp"
     #    "include/um2/geometry/point.hpp"
     #    "include/um2/geometry/axis_aligned_box.hpp"
     #    "include/um2/geometry/polytope.hpp"
