--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,18 +3,17 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_test.cmake)
 # ------------------------------------------------------------------------------
 # common 
 # ------------------------------------------------------------------------------
-# memory
-add_um2_test(addressof    ./common/memory/addressof.cpp)
-add_um2_test(construct_at ./common/memory/construct_at.cpp)
-add_um2_test(Vector       ./common/Vector.cpp)
-#add_um2_test(sto    ./common/sto.cpp) 
+add_um2_test(./common/memory/addressof.cpp)
+add_um2_test(./common/memory/construct_at.cpp)
+add_um2_test(./common/Vector.cpp)
+#add_um2_test(test_sto          ./common/sto.cpp) 
 #add_um2_test(string ./common/string.cpp)
 #add_um2_test(color  ./common/color.cpp)
 #
 # math
-add_um2_test(morton ./math/morton.cpp)
-#add_um2_test(vec    ./math/vec.cpp)
-#add_um2_test(mat    ./math/mat.cpp)
+#add_um2_test(test_morton ./math/morton.cpp)
+#add_um2_test(test_Vec    ./math/Vec.cpp)
+#add_um2_test(test_Mat    ./math/Mat.cpp)
 #
 ## geometry
 #add_um2_test(point            ./geometry/point.cpp)
