--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,7 +23,8 @@ add_um2_test(./math/Mat.cpp)
 add_um2_test(./geometry/Point.cpp)
 add_um2_test(./geometry/AxisAlignedBox.cpp)
 add_um2_test(./geometry/LineSegment.cpp)
-#add_um2_test(triangle         ./geometry/triangle.cpp)
+add_um2_test(./geometry/Triangle.cpp)
+add_um2_test(./geometry/Quadrilateral.cpp)
 #
 #if (UM2_ENABLE_VIS)
 #  add_um2_test(shader ./visualization/shader.cpp)
