--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,6 +25,12 @@ add_um2_test(./geometry/AxisAlignedBox.cpp)
 add_um2_test(./geometry/LineSegment.cpp)
 add_um2_test(./geometry/Triangle.cpp)
 add_um2_test(./geometry/Quadrilateral.cpp)
+
+# ------------------------------------------------------------------------------
+# mesh
+# ------------------------------------------------------------------------------
+add_um2_test(./mesh/RegularGrid.cpp)
+
 #
 #if (UM2_ENABLE_VIS)
 #  add_um2_test(shader ./visualization/shader.cpp)
