--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ option(UM2_ENABLE_CLANG_FORMAT  "Enable clang-format targets"     ${UM2_DEV_MODE
 option(UM2_ENABLE_CLANG_TIDY    "Enable clang-tidy"               ${UM2_DEV_MODE})
 option(UM2_CLANG_TIDY_FIX       "Enable clang-tidy to fix errors" OFF            )  
 option(UM2_ENABLE_CPPCHECK      "Enable cppcheck"                 ${UM2_DEV_MODE})
-
+option(UM2_ENABLE_COVERAGE      "Enable coverage"                 ${UM2_DEV_MODE})
 ## um2 library ################################################################
 ###############################################################################
 
