--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,4 +71,12 @@ jobs:
 
       - name: Run tests
         run: 
-          make -j -C build test 
+          make -j -C build test
+
+      - name: Upload coverage
+        if: matrix.dev_mode == 'ON' and matrix.compiler == 'gcc' and matrix.build_type == 'Debug' and github.ref == 'refs/heads/main'
+        run: |
+            sudo apt install -y python3.8 python3-pip
+            python3.8 -m pip install --upgrade pip
+            python3.8 -m pip install cpp-coveralls
+            coveralls -e cmake-build-debug/ -e env/ -e scripts/ -e tpls/  -t 0DVBjvDnRVu0ePXv7D7lYse8SLklwKXwn
