--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
           make -j -C build test
 
       - name: Upload coverage
-        if: matrix.dev_mode == 'ON' and matrix.compiler == 'gcc' and matrix.build_type == 'Debug' and github.ref == 'refs/heads/main'
+        if: matrix.dev_mode == 'ON' && matrix.build_type == 'Debug' && github.ref == 'refs/heads/main' && matrix.compiler == 'gcc'
         run: |
             sudo apt install -y python3.8 python3-pip
             python3.8 -m pip install --upgrade pip
