--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,9 +74,9 @@ jobs:
           make -j -C build test
 
       - name: Upload coverage
-        if: matrix.dev_mode == 'ON' && matrix.build_type == 'Debug' && matrix.compiler == 'gcc'
+        if: matrix.dev_mode == 'ON' && matrix.build_type == 'Debug' && github.ref == 'refs/heads/main' && matrix.compiler == 'gcc'
         run: |
-            sudo apt install -y python3.8 python3-pip
-            python3.8 -m pip install --upgrade pip
-            python3.8 -m pip install cpp-coveralls
+            sudo apt install -y python3 python3-pip
+            python3 -m pip install --upgrade pip
+            python3 -m pip install cpp-coveralls
             coveralls -e cmake-build-debug/ -e env/ -e scripts/ -e tpls/  -t 0DVBjvDnRVu0ePXv7D7lYse8SLklwKXwn
