--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,4 +79,4 @@ jobs:
             sudo apt install -y python3 python3-pip
             python3 -m pip install --upgrade pip
             python3 -m pip install cpp-coveralls
-            coveralls -e cmake-build-debug/ -e env/ -e scripts/ -e tpls/  -t 0DVBjvDnRVu0ePXv7D7lYse8SLklwKXwn
+            coveralls -e cmake-build-debug/ -e env/ -e scripts/ -e tpls/  -t 0DVBjvDnRVu0ePXv7D7lYse8SLklwKXwn --gcov /usr/bin/gcov-12
