--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -37,7 +37,8 @@
 #undef PURE
 #undef CONST
 #undef HOT
-#if defined(__NVCC__)
+#undef HIDDEN
+#if UM2_ENABLE_CUDA 
 #  define PURE
 #  define CONST
 #  define HOT
@@ -46,14 +47,17 @@
 #  define CONST [[gnu::const]]
 #  define HOT   [[gnu::hot]]
 #endif
+#define HIDDEN __attribute__ ((visibility ("hidden"))) 
 
 // Typedefs
 // -----------------------------------------------------------------------------
 #cmakedefine01 UM2_ENABLE_INT64
 #if UM2_ENABLE_INT64
 using Size = int64_t;
+consteval auto sizeMax() -> Size { return 0x7FFFFFFFFFFFFFFF; }
 #else
 using Size = int32_t;
+consteval auto sizeMax() -> Size { return 0x7FFFFFFF; }
 #endif
 
 // Eigen
