--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,11 +31,11 @@ add_um2_test(./geometry/Quadrilateral.cpp)
 # ------------------------------------------------------------------------------
 add_um2_test(./mesh/RegularGrid.cpp)
 add_um2_test(./mesh/RegularPartition.cpp)
-#
-## ------------------------------------------------------------------------------
-## ray_casting
-## ------------------------------------------------------------------------------
-#add_um2_test(./ray_casting/intersect/Ray-LineSegment.cpp)
+
+# ------------------------------------------------------------------------------
+# ray_casting
+# ------------------------------------------------------------------------------
+add_um2_test(./ray_casting/intersect/Ray-LineSegment.cpp)
 
 #
 #if (UM2_ENABLE_VIS)
