--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,6 +31,7 @@ add_um2_test(./geometry/Quadrilateral.cpp)
 # ------------------------------------------------------------------------------
 add_um2_test(./mesh/RegularGrid.cpp)
 add_um2_test(./mesh/RegularPartition.cpp)
+add_um2_test(./mesh/TriMesh.cpp)
 
 # ------------------------------------------------------------------------------
 # ray_casting
